--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
   },
   "homepage": "https://github.com/cat-box/ACIT-3900-Practicum#readme",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "hbs": "^4.0.5",
-    "lodash": "^4.17.15"
+    "lodash": "^4.17.15",
+    "mariadb": "^2.1.1"
   }
 }
