--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "express": "^4.17.1",
     "hbs": "^4.0.5",
     "lodash": "^4.17.15",
-    "mariadb": "^2.1.1"
+    "mariadb": "^2.1.1",
+    "mysql": "^2.17.1",
+    "uuid": "^3.3.3"
   }
 }
