--- a/package.json
+++ b/package.json
@@ -20,11 +20,15 @@
   "dependencies": {
     "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
+    "connect-flash": "^0.1.1",
     "express": "^4.17.1",
+    "express-session": "^1.16.2",
     "hbs": "^4.0.5",
     "lodash": "^4.17.15",
     "mariadb": "^2.1.1",
     "mysql": "^2.17.1",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "uuid": "^3.3.3"
   }
 }
