--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "connect-flash": "^0.1.1",
     "express": "^4.17.1",
     "express-session": "^1.16.2",
+    "formidable": "^1.2.1",
     "hbs": "^4.0.5",
     "lodash": "^4.17.15",
     "mysql": "^2.17.1",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
+    "util": "^0.12.1",
     "uuid": "^3.3.3"
   }
 }
