--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "hbs": "^4.0.5",
     "lodash": "^4.17.15",
     "mysql": "^2.17.1",
+    "nodemailer": "^6.3.1",
+    "nodemailer-mailgun-transport": "^1.4.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "uuid": "^3.3.3"
